--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,370 @@
-@use './reset.scss';
+$bg-color:red;
+$fontsize:20px;
+@mixin image_size {
+  width: 50px;
+}
+@mixin zomato_logo {
+      
+      width: 100px;
+}
+@mixin location{
+      background-color:white;
+      width: 60%;
+      padding: 10px;
+      .input{
+            .search-del{
+                  border-radius: 7px;
+                  width: 70%;
+                  height: 40px;                  
+                  font-size: 16px;
+                  margin: 5px;
+                  padding-left: 5px;
+            }
+            .detect-btn{
+                  padding: 6px;
+                  height: 40px;
+                  padding-right: 5px;
+            }
+           
+      }
+      .order-btn{
+            background-color: green;
+                  color: white;
+                  border-radius: 5px;
+                  width: 100%;
+                  height: 40px;                              font-size: 16px;
+                  margin: 5px;
+      }
+      .line{
+            
+            width: 100%;
+            height: 1px;
+            background-color: rgb(199, 192, 192);
+            margin-bottom: 10%;
+        }
+        .offer{
+              padding: 15px;
+              color:green;
+        }
+}
+html{
+  height: 100%;
+ 
+}
+@mixin margin {
+      background-color:#dfe8e1;
+     padding: 25px;
+}
+@mixin desktop{
+      @media (max-width: 756px) {
+            @content;
+      }
+}
+body{
+      height: 100%;
+      .h-container{
+            display: grid;
+            grid-template-columns: 50% 50%;
+            text-align: center;
+            .left_header{
+                  img{
+                        @include image_size;
+                  }
+                  display: grid;
+                  grid-template-columns:30%;
+                  list-style-type: none;
+                  text-align: center;
 
-/* Add your css here */
+            }
+            .right_header{
+                 
+          
+                  .list{
+                        display: grid;
+                        grid-template-columns:30% 30% 30%;
+                        float: left;
+                        align-items: center;
+                        list-style-type: none;
+                         img{
+                            @include image_size;
+                            
+                        }
+                     
+                  }
+                  @include desktop{
+                        display: flex;
+                        flex-direction: column; 
+                        flex-wrap: nowrap;    
+                        margin-right: 0px;
+                       
+                        ul li{
+                              @include desktop{
+                                    float: right;
+                                   
+                                }
+                        }
+                       }
+                      
+            }
+           
+      }
+      .banner{
+        width: 100%;
+        height: auto;
+        background-image: url(bg.jpg);
+        background-repeat: no-repeat;
+         .section_1{
+            display: flex;
+            flex-direction: row;
+           justify-content: flex-end;
+           color: white;
+            padding: 5x;
+            div{
+                  padding: 50px 20px;
+            }
+            button{
+                  padding: 10px;
+                  background: none;
+                  border:  2px solid white;
+                  color: white;
+                  border-radius: 5px;
+            }
+            @include desktop{
+                  justify-content: center;
+                  font-size: larger;
+            }
+         }
+
+         .section_2{
+            display: flex;
+            flex-direction: column;
+            justify-content:center;
+            
+               .div_1{
+                  img{
+                        @include zomato_logo; 
+                  }
+                   @include desktop{
+                        justify-content: center;
+                        font-size: larger;
+                        
+                   }
+                  text-align: center;
+               }
+               .div_2{
+                  text-align: center;
+                  color: white;  
+                  p{
+                        font-size: 25px;
+                  }
+               }
+               .search-restaurant{
+                     display: flex;
+                     flex-direction: row;
+                     justify-content: center;
+                     @include desktop{
+                           flex-direction: column;
+                           justify-content: center;
+                           padding: 50px;
+                     }
+                  
+                         #inputState{
+                              width: 150px;
+                              height: 35px;
+                              border-radius: 5px;
+                              border: white;
+                              margin: 5px;
+                              padding-left: 10px;
+                              @include desktop{
+                                    width: 100%;
+                                    padding: 10px;
+                                    
+                              }
+                         }
+                        #search-rest{
+                              width: 500px;
+                              height: 35px;
+                              border-radius: 5px;
+                              border: white;
+                              margin: 5px;
+                              padding-left: 10px;
+                              @include desktop{
+                                    width: 100%;
+                              }
+                        }
+                 
+                        #search-btn{
+                              background-color: #ff3d3d;
+                              color: white;
+                              border-radius: 5px;
+                              width: 100px;
+                              height: 35px;
+                              font-size: 16px;
+                              margin: 5px;
+                             @include desktop{
+                                   width: 100%;
+                             }
+                        }
+                        p{
+                              font-size: 25px;
+                        }
+                  }
+            
+         }
+      }
+    .widget{
+        
+         display: grid;
+         grid-template-columns: 70% 60%;
+         @include margin;
+         .widget_1{
+               
+                img{
+                        padding-left: 20px;
+                        width: 90%;
+                  }
+               
+             }
+          .widget_2{
+            @include location;
+          }
+         
+            @include desktop{
+                  grid-row: 30% auto;
+                  grid-template-columns: auto;
+                 
+            }
+          
+    }
+    .collections {
+          @include margin;
+          display: flex;
+          flex-direction: row;
+          grid-area: collection;
+          flex-wrap: wrap;
+         
+          }
+          .card{
+            width: 40%;
+           
+              @include desktop{
+                  width: 48%;
+                  margin: 0 0 5px 5px;
+                  text-align: center;
+              }
+              @media (min-width: 756px) {
+                  float: left;
+            }
+            
+          }
+          .collection-footer{
+            background-color:white;
+            padding: 10px;
+            width: 100%;
+            text-align: center;
+            color: red;
+      }
+      .categories{
+            @include margin;
+            .category-list{
+                
+                  background-color: white;
+                 display: flex;
+                 flex-direction: row; 
+                
+                 list-style-type:none;
+                 padding-right: 100px;
+                @include desktop{
+                      display: flex;
+                      flex-direction: column;
+                }
+            }
+            li{
+                  text-align: center;
+                  
+                  width: 12.5%;
+                  @include desktop{
+                      width: 32%;
+                   
+                  }
+                  img{
+                      width: 80px;
+                      @include desktop{
+                          width: 60px;
+                      }
+                  }
+              }
+      } 
+      .localities{
+            @include margin;
+            
+            .local_lists{
+                  background-color: white;
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;;
+                  padding: 20px;
+                  ul{
+                        list-style-type: none;
+                  }
+                  @include desktop{
+                        flex-direction: column;
+                  }
+            }
+           
+      }  
+      footer{
+            @include margin;
+           color: white;
+            .foot-top{
+                  padding: 10px;
+                  @include zomato_logo;
+                  display: flex;
+                  flex-direction: row;
+                  
+            } 
+            .dropdown_1{
+                  display: flex;
+                  flex-direction: row;
+                  
+                 
+            }
+            ul{
+                  list-style-type: none;
+            }
+            .footer-wrapper{
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+            }
+            .line{
+                  width: 95%;
+                  height: 0.5px;
+                  background-color:rgb(96, 94, 94) ;
+                  margin: 15px;
+              }
+              .countries{
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                  @include desktop{
+                        flex-direction: column;
+                        
+                  }
+              }
+            .terms{
+                  display: flex;
+                  flex-direction: row;
+                  li{
+                        padding-right: 20px;
+                  }
+                  @include desktop{
+                        flex-direction: column;
+                  }
+            }
+      }
+
+      
+} 
+
+ 
